@@ -719,13 +719,19 @@ END
 	my $bugnum = $2; my $blockers = $4;
 	$addsub = "add";
 	$addsub = "sub" if ($1 eq "un");
-	
+	if ($bugnum =~ m/^-\d+$/ && defined $clonebugs{$bugnum}) {
+	     $bugnum = $clonebugs{$bugnum};
+	}
+
 	my @okayblockers;
 	my @badblockers;
 	foreach my $b (split /[\s,]+/, $blockers) {
 	    $b=~s/^\#//;
 	    if ($b=~/[0-9]+/) {
 		$ref=$b;
+		if ($ref =~ m/^-\d+$/ && defined $clonebugs{$ref}) {
+		     $ref = $clonebugs{$ref};
+		}
 		if (&getbug) {
 		    push @okayblockers, $b;
 
