@@ -113,6 +113,8 @@ debbugs (2.4.2) UNRELEASED; urgency=low
       UTF8 material. (closes: #364026)
     - Add links to Closes: text for closed bugs. (closes: #320986)
     - Add X-$gProject-PR-Source: line (closes: #219230)
+    - Document nnn.*@foobar addresses (closes: #188670)
+    - Support cloned bugs in control blocking (closes: #337329)
   
   
  -- Colin Watson <cjwatson@debian.org>  Fri, 20 Jun 2003 18:57:25 +0100
